add confirm button on dangerous actions like delete

--- a/sails-bin/templates/root/root.html
+++ b/sails-bin/templates/root/root.html
@@ -35,7 +35,7 @@
 	  <td>{{ "{:?}"|format(user.get_validated()) }}</td>
 	  <td>{{ "{:?}"|format(user.get_user_status()) }}</td>
 	  <td><a href="/root/activate_user?user_id={{user.get_id()}}" class="btn btn-success" role="button">🔑</a> <a href="/root/downgrade_user?user_id={{user.get_id()}}" class="btn btn-warning" role="button">▼</a> <a href="/root/promote_user?user_id={{user.get_id()}}" class="btn btn-primary" role="button">▲</a></td>
-	  <td><a href="/root/delete_user?user_id={{user.get_id()}}" class="btn btn-danger" role="button">Delete</a>
+	  <td><a href="/root/delete_user?user_id={{user.get_id()}}" class="btn btn-danger" role="button" onclick="return confirm('Please confirm your action');">Delete</a>
 	</tr>
 	{% endfor %}
       </tbody>
