--- a/sails-bin/templates/market/book_info_owned.html
+++ b/sails-bin/templates/market/book_info_owned.html
@@ -31,6 +31,6 @@
 <h1>Actions</h1>
 <a href="post_book?book_id={{book.get_id()}}" class="btn btn-primary" role="button">Update</a>
 <a href="instruction?book_id={{book.get_id()}}" class="btn btn-warning" role="button">Instruction</a>
-<a href="delete?book_id={{book.get_id()}}" class="btn btn-danger" role="button">Delete</a>
+<a href="delete?book_id={{book.get_id()}}" class="btn btn-danger" role="button" onclick="return confirm('Please confirm your action');">Delete</a>
 </div>
 {% endblock actions %}
