--- a/sails-bin/templates/market/update_book.html
+++ b/sails-bin/templates/market/update_book.html
@@ -45,7 +45,7 @@
     <div class="form-group row">
       <label for="inputDescription" class="col-sm-2 col-form-label">Description</label>
       <div class="col-sm-10">
-	<textarea class="form-control" id="exampleFormControlTextarea1" rows="15" name="description">{{ book.get_description() }}</textarea>
+	<textarea class="form-control" id="simplemde" rows="15" name="description">{{ book.get_description() }}</textarea>
       </div>
     </div>
     <br>
@@ -55,3 +55,16 @@
   <br>
 </main>
 {% endblock content %}
+
+{% block script %}
+  {% call super()%}
+  <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
+  <script>
+    var simplemde = new SimpleMDE({
+	spellChecker: false,
+	forceSync: true,
+	promptURLs: true,
+	element: document.getElementById("simplemde")
+    });
+  </script>
+{% endblock script %}
