--- a/sails-bin/templates/market/update_book.html
+++ b/sails-bin/templates/market/update_book.html
@@ -45,7 +45,7 @@
     <div class="form-group row">
       <label for="inputDescription" class="col-sm-2 col-form-label">Description</label>
       <div class="col-sm-10">
-	<textarea class="form-control" id="simplemde" rows="15" name="description">{{ book.get_description() }}</textarea>
+	<textarea class="form-control" id="summernote" rows="15" name="description">{{ book.get_description() }}</textarea>
       </div>
     </div>
     <br>
@@ -58,13 +58,5 @@
 
 {% block script %}
   {% call super()%}
-  <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
-  <script>
-    var simplemde = new SimpleMDE({
-	spellChecker: false,
-	forceSync: true,
-	promptURLs: true,
-	element: document.getElementById("simplemde")
-    });
-  </script>
+  {% include "summernote.html" %}
 {% endblock script %}
