--- a/sails-bin/templates/user/update_user_page.html
+++ b/sails-bin/templates/user/update_user_page.html
@@ -28,7 +28,7 @@
     <div class="form-group row">
       <label for="inputDescription" class="col-sm-2 col-form-label">Description</label>
       <div class="col-sm-10">
-	<textarea class="form-control" id="exampleFormControlTextarea1" rows="15" name="description">{{ user.get_description().unwrap_or("") }}</textarea>
+	<textarea class="form-control" id="summernote" rows="15" name="description">{{ user.get_description().unwrap_or("") }}</textarea>
       </div>
     </div>
     <br>
@@ -38,3 +38,8 @@
   <br>
 </main>
 {% endblock content %}
+
+{% block script %}
+  {% call super()%}
+  {% include "summernote.html" %}
+{% endblock script %}
