--- a/sails-bin/templates/summernote.html
+++ b/sails-bin/templates/summernote.html
@@ -18,7 +18,7 @@
           ['para', ['ul', 'ol', 'paragraph']],
           ['table', ['table']],
           ['insert', ['link', 'picture', 'video']],
-          ['view', ['fullscreen', 'codeview', 'help']]
+          ['view', ['codeview']]
       ]
   });
 
