--- a/sails-bin/templates/market/book_info_guest.html
+++ b/sails-bin/templates/market/book_info_guest.html
@@ -38,7 +38,7 @@
       <th scope="row">Category</th>
       	{% match category %}
 	{% when Some with (ctg) %}
-        <td><a href="categories?ctg={{ ctg.id() }}">{{ ctg.name() }}</a></td>
+        <td><a href="categories?category={{ ctg.id() }}">{{ ctg.name() }}</a></td>
         {% when None %}
 	<td>Not categorized</td>
         {% endmatch %}
@@ -49,12 +49,13 @@
     </tr>
     </tbody>
     </table>
-    {% endblock %}
+    {% endblock book %}
+    {% block actions %}{% endblock actions %}
     </div>
     <br>
 
     <div class="bg-light p-5 rounded markdown-body">
-      {{ desc_rendered|safe }}
+      {{ book.get_description()|safe }}
     </div>
     <br>
 
@@ -64,7 +65,14 @@
     <a href="/user" class="btn btn-primary" role="button">Sign in to contact the seller</a>
     {% endblock seller %}
     </div>
+    <br>
 
-    {% block actions %}{% endblock actions %}
+    <div class="bg-light p-5 rounded">
+      {% block seller_desc %}
+          <h1>Seller's  profile</h1>
+	  <a href="/user" class="btn btn-primary" role="button">Sign in to view seller's profile</a>
+      {% endblock seller_desc %}
+    </div>
+    <br>
 </main>
 {% endblock content %}
