--- a/sails-bin/templates/market/book_info_guest.html
+++ b/sails-bin/templates/market/book_info_guest.html
@@ -1,19 +1,16 @@
 {% extends "base.html" %}
 {% block head %}
 {% call super() %}
-<link href="/static/css/markdown.css" rel="stylesheet">
 <style>
-	.markdown-body {
+	.html-body {
 		box-sizing: border-box;
 		min-width: 200px;
 		margin: 0 auto;
 		padding: 45px;
 	}
 
-	@media (max-width: 767px) {
-		.markdown-body {
-			padding: 15px;
-		}
+	.html-body img {
+	    max-width:100%!important
 	}
 </style>
 {% endblock head %}
@@ -54,7 +51,7 @@
     </div>
     <br>
 
-    <div class="bg-light p-5 rounded markdown-body">
+    <div class="bg-light p-5 rounded html-body">
       {{ book.get_description()|safe }}
     </div>
     <br>
