--- a/sails-bin/templates/base.html
+++ b/sails-bin/templates/base.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>{% block title %}{% endblock title %} | FLibrary</title>
   <meta name="description" content="An online second-hand book market">
-  <meta name="author" content="Harry Ying">
+  <meta name="author" content="FLibrary Development Taskforce">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap core CSS -->
