change the favicon

--- a/sails-bin/templates/base.html
+++ b/sails-bin/templates/base.html
@@ -14,7 +14,7 @@
 
   <link href="/static/css/bootstrap-table.min.css" rel="stylesheet">
   <link href="/static/css/summernote-fix.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css" rel="stylesheet">
+  <link href="/static/summernote-lite.min.css" rel="stylesheet">
   {% endblock head %}
 </head>
 {% block body %}
