fix summernote js

--- a/sails-bin/templates/summernote.html
+++ b/sails-bin/templates/summernote.html
@@ -1,4 +1,4 @@
-<script src="/static/summernote-lite.min.js"></script>
+<script src="/static/js/summernote-lite.min.js"></script>
 <script>
   $('#summernote').summernote({
       placeholder: 'Write your description here',
