revert summernote js self-hosting

--- a/sails-bin/templates/summernote.html
+++ b/sails-bin/templates/summernote.html
@@ -1,4 +1,4 @@
-<script src="/static/js/summernote-lite.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.js"></script>
 <script>
   $('#summernote').summernote({
       placeholder: 'Write your description here',
