--- a/sails-bin/templates/user/portal_guest.html
+++ b/sails-bin/templates/user/portal_guest.html
@@ -72,5 +72,7 @@
     <br>
   {% endif %}
 
+  {% block orders_placed %}{% endblock orders_placed %}
+  {% block orders_received %}{% endblock orders_received %}
 </main>
 {% endblock content %}
