fix issue regarding transaction consistency on failures

--- a/sails-bin/templates/market/book_info_user.html
+++ b/sails-bin/templates/market/book_info_user.html
@@ -33,5 +33,5 @@
 {% endblock seller %}
 
 {% block actions %}
-<a href="/orders/purchase?book_id={{book.get_id()}}" class="btn btn-primary" role="button">Purchase</a>
+<a href="/orders/purchase?book_id={{book.get_id()}}" class="btn btn-primary" role="button" onclick="return confirm('Do you really want to purchase it?');">Purchase</a>
 {% endblock actions %}
