--- a/sails-bin/templates/base.html
+++ b/sails-bin/templates/base.html
@@ -46,6 +46,7 @@
    {% block script %}
   <script src="/static/js/jquery.min.js"></script>
   <script src="/static/js/popper.min.js"></script>
+  <script src="/static/js/qrcode.min.js"></script>
   <script src="/static/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   <script src="/static/js//bootstrap-table.min.js"></script>
 
