--- a/sails-bin/templates/orders/alipay_process.html
+++ b/sails-bin/templates/orders/alipay_process.html
@@ -25,10 +25,20 @@
         } catch (b) {
             returnApp()
         }
+	// Setup the title
+	AlipayJSBridge.call('setTitle', {
+                    title: 'FLibrary',
+                    subtitle: 'Online Payment Center'
+        });
+	// Setup the transfer
         AlipayJSBridge.call("startApp", {
             appId: "20000123",
             param: info
-        }, function(a) {})
+        }, function(a) {
+	    if (a.errorCode > 0) {
+                alert(JSON.stringify(a));
+            }
+	})
     });
     document.addEventListener("resume", function(a) {
         returnApp()
