--- a/sails-bin/templates/orders/order_info_seller.html
+++ b/sails-bin/templates/orders/order_info_seller.html
@@ -54,7 +54,7 @@
     </tr>
     <tr>
       <th scope="row">Book ID</th>
-      <td>{{ book.get_shortid() }}</td>
+      <td><a href="/market/book_info?book_id={{ book.get_id() }}">{{ book.get_shortid() }}</a></td>
     </tr>
     <tr>
       <th scope="row">Buyer</th>
