--- a/sails-bin/templates/user/signup.html
+++ b/sails-bin/templates/user/signup.html
@@ -9,6 +9,9 @@
     function enableBtn(){
       document.getElementById("signup-submit").disabled = false;
     }
+    function disableBtn(){
+      document.getElementById("signup-submit").disabled = true;
+    }
     </script>
 {% endblock head %}
 
@@ -35,7 +38,7 @@
     </div>
     <div class="g-recaptcha" data-sitekey="{{ recaptcha_key }}" data-callback="enableBtn"></div>
     <br/>
-    <button class="w-100 btn btn-lg btn-primary" type="submit" id="signup-submit" onclick="onSubmit()" disabled="disabled">Sign up</button>
+    <button class="w-100 btn btn-lg btn-primary" type="submit" id="signup-submit" onclick="disableBtn(); onSubmit()" disabled="disabled">Sign up</button>
   </form>
   {% include "display_flash.html" %}
 </main>
