fix signup and signin pages' layouts

--- a/sails-bin/templates/user/signin.html
+++ b/sails-bin/templates/user/signin.html
@@ -12,7 +12,7 @@
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
     <div class="form-floating">
-      <input type="email" class="form-control" id="floatingInput" placeholder="Email" name="email">
+      <input type="email" class="form-control" id="floatingEmail" placeholder="Email" name="email">
       <label for="floatingInput">Email</label>
     </div>
     <div class="form-floating">
