--- a/sails-bin/static/css/signin.css
+++ b/sails-bin/static/css/signin.css
@@ -32,6 +32,15 @@ body {
   border-bottom-left-radius: 0;
 }
 
+.form-signin input[type="text"] {
+  margin-bottom: -1px;
+  margin-top: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  border-top-right-radius: 0;
+  border-top-left-radius: 0;
+}
+
 .form-signin input[type="password"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
