--- a/sails-bin/templates/user/signup.html
+++ b/sails-bin/templates/user/signup.html
@@ -21,15 +21,15 @@
     <h1 class="h3 mb-3 fw-normal">Please enter information</h1>
 
     <div class="form-floating">
-      <input type="email" class="form-control" id="floatingInput" placeholder="Email" name="user_info[email]">
+      <input type="email" class="form-control" id="floatingEmail" placeholder="Email" name="user_info[email]">
       <label for="floatingInput">Outlook Email</label>
     </div>
     <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInput" placeholder="Name" name="user_info[name]">
+      <input type="text" class="form-control" id="floatingName" placeholder="Name" name="user_info[name]">
       <label for="floatingInput">Name</label>
     </div>
     <div class="form-floating">
-      <input type="text" class="form-control" id="floatingInput" placeholder="School" name="user_info[school]">
+      <input type="text" class="form-control" id="floatingSchool" placeholder="School" name="user_info[school]">
       <label for="floatingInput">School</label>
     </div>
     <div class="form-floating">
