--- a/sails-bin/templates/market/explore.html
+++ b/sails-bin/templates/market/explore.html
@@ -4,6 +4,8 @@
 
 {% block content %}
 <main class="container">
+  {% include "display_flash.html" %}
+
   <div class="bg-light p-5 rounded">
     <h1>Welcome to the market</h1>
     <p class="lead">Here you can see what books are on sale and post your own books.</p>
