--- a/sails-bin/templates/index.html
+++ b/sails-bin/templates/index.html
@@ -9,7 +9,7 @@
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">Where Knowledge Values</p>
       <a href="/user" class="btn btn-primary" role="button">Start</a>
-      <a href="https://github.com/flibrary/flibrary.github.io/wiki" class="btn btn-secondary" role="button">Learn More</a>
+      <a href="https://flibrary.lexugeyky.workers.dev/https://raw.githubusercontent.com/flibrary/flibrary.github.io/main/FLibrary%20Guide.pdf" class="btn btn-secondary" role="button">Learn More</a>
     </div>
     </div>
 </main>
