add google analytics global tag

--- a/sails-bin/templates/base.html
+++ b/sails-bin/templates/base.html
@@ -15,6 +15,16 @@
   <link href="/static/css/bootstrap-table.min.css" rel="stylesheet">
   <link href="/static/css/summernote-fix.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css" rel="stylesheet">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-WF9XR7VXE6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-WF9XR7VXE6');
+  </script>
   {% endblock head %}
 </head>
 {% block body %}
