--- a/sails-bin/templates/orders/order_info_buyer.html
+++ b/sails-bin/templates/orders/order_info_buyer.html
@@ -15,6 +15,9 @@
       There is nothing left to do.
 
       {% when sails_db::enums::TransactionStatus::Placed %}
+      <div class="alert alert-warning" role="alert">
+	注意：<b>请勿在支付宝支付页面填写任何备注</b>，因为这会覆盖掉自动生成的订单信息，可能导致您的付款没法被正确确认
+      </div>
       <div class="progress">
 	<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100" style="width: 33%"></div>
       </div>
