--- a/sails-bin/templates/market/all_books.html
+++ b/sails-bin/templates/market/all_books.html
@@ -29,3 +29,8 @@
   {% endif %}
 </main>
 {% endblock content %}
+
+{% block script %}
+  {% call super()%}
+  <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="9a9d77d4-fad3-4ab1-9022-e0f6856ab746";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+{% endblock script %}
