--- a/sails-bin/templates/orders/order_info_buyer.html
+++ b/sails-bin/templates/orders/order_info_buyer.html
@@ -85,4 +85,5 @@
     var qrcode = new QRCode("qrcode");
     qrcode.makeCode("alipays://platformapi/startapp?appId=20000067&url=https%3A%2F%2Fflibrary.info%2Forders%2Falipay%3Forder_id%3D{{order.get_id()}}");
   </script>
+  <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="9a9d77d4-fad3-4ab1-9022-e0f6856ab746";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 {% endblock script %}
