update navbar style

--- a/sails-bin/templates/base.html
+++ b/sails-bin/templates/base.html
@@ -31,7 +31,7 @@
 <body>
   <div id="page-container">
    <div id="content-wrap">
-   <nav class="navbar sticky-top navbar-expand-md navbar" style="background-color: #f1f1f1;">
+   <nav class="navbar sticky-top navbar-expand-md navbar shadow-sm bg-white">
       <div class="container">
         <a class="navbar-brand" href="/">FLibrary</a>
         <button class="navbar-toggler navbar-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarItems">
