fix admin operations redirection

--- a/sails-bin/templates/index.html
+++ b/sails-bin/templates/index.html
@@ -16,7 +16,7 @@
     <br>
     <div class="p-5 rounded shadow">
       <h1>{{ user.total }} Active Users</h1>
-      <p class="lead">FLibrary enjoys the popularity among juniors and seniors for its simplicity and efficiency. From your newgrader's textbook to highly-demanding university-level coursebooks, we cover it all, in a right way.</p>
+      <p class="lead">FLibrary enjoys the popularity among juniors and seniors for its simplicity and efficiency. From your newgrader's textbook to highly-demanding university-level coursebooks, we cover them all, in a right way.</p>
     </div>
 
     <br>
